# life-journal-dx

./: .gitignore  CLAUDE.md  Cargo.toml  Dioxus.toml  tailwind.css
assets/: main.css  tailwind.css
src/: main.rs  routers.rs
src/components/: mod.rs  tab_bar.rs
src/components/tab_bar/: component.rs  style.css
src/components/tabs/: component.rs
src/pages/: home.rs  mod.rs  profile.rs  task.rs
